<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sign_out_btn"
        android:icon="@drawable/ic_sign_out_24"
        app:showAsAction="ifRoom"
        android:title="Sign Out" />
    <item
        android:id="@+id/edit_profile_btn"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="Edit Profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sign_out_zoom_btn"
        android:icon="@drawable/ic_zoom_24"
        android:title="Sign out of Zoom"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_account_btn"
        android:icon="@drawable/ic_baseline_delete_forever_red_24"
        app:showAsAction="never"
        android:title="Delete Account" />
</menu>
